# interdependent-lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPILOT.md  README.md  interdependent-lib_msdmd.ts  pyproject.toml
.agents/skills/: README.md
.agents/skills/hmmm/: SKILL.md
.agents/skills/meta-module-build/: SKILL.md  runner.py
.github/workflows/: python-package.yml  sync-libs.yml
docs/: chapter-4.md  dependency-policy.md  naming-migration.md  prime-tensor-stack.md  release-checklist.md  ucns_operational_widening.md
docs/handoffs/: 2026-05-21-ucns-metric-geometry-v2.md  2026-06-05-session-handoff.md
interdependent_lib/: __init__.py  coherence_primes.py
libs/: README.md
libs/aimmh/: README.md
libs/aimmh/src/: __init__.py  adapters.py  conversations.py
libs/metapat/: README.md
libs/pcea/: README.md
libs/pcea/src/: __init__.py  cipher.py  codec.py  contract.py  instance.py  kdf.py  primes.py
libs/pcna/: README.md
libs/pcna/src/: edcm.py  helix_vis.py  main.py  memory_core.py  merge.py  pcna.py  ptca_core.py  routing_loop.py  sigma.py  tensor_engine.py  theta.py  topology.py  zeta.py
libs/pcta/: README.md
libs/ptca/: README.md
libs/ptca/src/: __init__.py  exchange.py  instance.py  primes.py  provenance.py  sentinels.py  tensor.py
libs/ptcna/: README.md
libs/ptcna/src/: __init__.py
libs/ptcna/src/circle/: __init__.py  audit.py
libs/ptcna/src/core/: __init__.py  constants.py  exchange.py  instance.py  primes.py  provenance.py  sentinels.py  tensor.py
libs/ptcna/src/core/prime_core/: __init__.py  constants.py  core.py  fiq.py
libs/ptcna/src/core/prime_core/tests/: test_constants_coherence_prime.py  test_fiq_opaque.py  test_ptca_core_stratified.py
libs/ptcna/src/core/tests/: test_constants.py  test_exchange.py  test_instance.py  test_primes.py  test_provenance.py  test_sentinels.py  test_tensor.py
libs/ptcna/src/neural/: __init__.py  edcm.py  helix_vis.py  main.py  memory_core.py  merge.py  pcna.py  ring_core.py  routing_loop.py  sigma.py  tensor_engine.py  theta.py  topology.py  zeta.py
libs/ptcna/src/neural/tests/: test_tensor_engine.py  test_topology.py
libs/ptcna/src/seed/: __init__.py  audit.py
libs/ptcna/src/seed/tests/: test_compose.py  test_constants.py
libs/ucns/: README.md
libs/zfae/: README.md
scripts/: rename-repos.sh
tests/: test_coherence_primes.py  test_hmmm_skill.py  test_interdependent_lib.py  test_module_build_runner.py
