[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interdependent-lib"
version = "0.1.3"
description = "Unified meta-package combining the four-letter and five-letter acronym libraries of The Interdependency"
readme = "README.md"
license = { text = "MPL-2.0" }
authors = [
  { name = "Erin Patrick Spencer", email = "wayseer@interdependentway.org" }
]
requires-python = ">=3.9"
keywords = ["prime", "tensor", "encryption", "neural", "unit-circle", "multi-model", "ai", "orchestration"]
dependencies = []

[project.optional-dependencies]
# Standalone libraries
pcea  = ["pcea>=0.1.0"]
ucns  = ["ucns>=0.9.1"]

# Five-letter acronym libraries
aimmh = ["aimmh-lib>=1.1.0"]

# Prime-tensor stack: the former pcna / pcta / pcsa repos are consolidated into
# the single ptcna package (neural/circle/seed/core), now published to PyPI.
# See docs/naming-migration.md and docs/dependency-policy.md.
ptcna = ["ptcna>=0.1.0"]

# Install all packaged libraries at once
all = [
    "pcea>=0.1.0",
    "ucns>=0.9.1",
    "aimmh-lib>=1.1.0",
    "ptcna>=0.1.0",
]

# Developer tooling
dev = [
    "pytest>=8.0",
    "build",
    "twine",
]

[project.urls]
Homepage   = "https://interdependentway.org"
Repository = "https://github.com/The-Interdependency/interdependent-lib"
"Bug Tracker" = "https://github.com/The-Interdependency/interdependent-lib/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["interdependent_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
